--- a/app/views/content/create.html.erb
+++ b/app/views/content/create.html.erb
@@ -1,8 +1,9 @@
-<div class="content row">
+<div class="row center-align">
   <div class="success">
-    <h3>
-      投稿が完了しました。
-    </h3>
-    <a class="btn" href="/blog">投稿一覧へ戻る</a>
+    <h4 class="cyan-text blue-grey-text">
+      OK
+    </h4>
+    <a class="btn green
+" href="/blog">Top</a>
   </div>
 </div>
