--- a/app/views/content/index.html.erb
+++ b/app/views/content/index.html.erb
@@ -1,6 +1,6 @@
 <% @content.each do |content| %>
   <div class="row">
-    <div class="col s12 m6">
+    <div class="col s8 offset-s2">
       <div class="card">
         <div class="card-content">
 
