--- a/app/views/content/new.html.erb
+++ b/app/views/content/new.html.erb
@@ -1,12 +1,13 @@
 <div class="row">
-  <div class="input-field col s12">
+  <div class="input-field col s8 offset-s2">
     <%= form_tag('/blog',method: :post) do %>
-      <h3>
-        投稿する
-      </h3>
-      <textarea cols="30" name="content" placeholder="content" rows="10"></textarea>
-
-      <input type="submit" class="btn waves-effect" value="SENT">
+      <h4 class="cyan-text blue-grey-text">
+        New
+      </h4>
+      <textarea class="materialize-textarea" cols="30" name="content" placeholder="content" rows="10"></textarea>
+      <div class="right">
+        <input type="submit" class="btn waves-effect green" value="SENT">
+      </div>
     <% end %>
   </div>
 </div>
