--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,12 +22,12 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
 
       <nav>
-      <div class="nav-wrapper">
-        <a href="/blog" class="brand-logo">Blog</a>
+      <div class="nav-wrapper yellow">
+        <a href="/blog" class="brand-logo center">Blog</a>
         <ul id="nav-mobile" class="right hide-on-med-and-down">
-          <li><a href="sass.html">Sass</a></li>
-          <li><a href="badges.html">Components</a></li>
-          <li><a href="collapsible.html">JavaScript</a></li>
+          <li><a href="badges.html">Signin</a></li>
+          <li><a href="collapsible.html">SignOut</a></li>
+          <li><a href="/blog/new">New</a></li>
         </ul>
       </div>
     </nav>
