--- a/app/views/content/index.html.erb
+++ b/app/views/content/index.html.erb
@@ -1,3 +1,5 @@
+
+<main>
 <% @content.each do |content| %>
   <div class="row">
     <div class="col s8 offset-s2">
@@ -16,3 +18,5 @@
     </div>
   </div>
 <% end %>
+</main>
+  <%= paginate(@content) %>
