--- a/app/views/content/new.html.erb
+++ b/app/views/content/new.html.erb
@@ -1,3 +1,4 @@
+<main>
 <div class="row">
   <div class="input-field col s8 offset-s2">
     <%= form_tag('/blog',method: :post) do %>
@@ -11,4 +12,4 @@
     <% end %>
   </div>
 </div>
-
+</main>
