--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,11 +24,20 @@
       <nav>
       <div class="nav-wrapper yellow">
         <a href="/blog" class="brand-logo center">Blog</a>
-        <ul id="nav-mobile" class="right hide-on-med-and-down">
-          <li><a href="badges.html">Signin</a></li>
-          <li><a href="collapsible.html">SignOut</a></li>
-          <li><a href="/blog/new">New</a></li>
-        </ul>
+        <% if user_signed_in? %>
+          <ul id="nav-mobile" class="right hide-on-med-and-down">
+            <li>
+              <a href="/users/<%=current_user.id %>">MyPage</a>
+            </li>
+            <li><%= link_to "LogOut", destroy_user_session_path, method: :delete %></li>
+            <li><a href="/blog/new">New</a></li>
+          </ul>
+        <% else %>
+          <ul id="nav-mobile" class="right hide-on-med-and-down">
+            <li><%= link_to "LogIn", new_user_session_path, class: 'post' %></li>
+            <li><%= link_to "SignUp", new_user_registration_path, class: 'post' %></li>
+          </ul>
+        <% end %>
       </div>
     </nav>
 
